--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
   <include layout="@layout/include_toolbar"/>
 
-  <LinearLayout
-      android:layout_width="match_parent"
-      android:layout_height="match_parent">
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="按钮"/>
-  </LinearLayout>
-
-
   <FrameLayout
-      android:id="@+id/frame_content"
+      android:id="@+id/content"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-</android.support.design.widget.CoordinatorLayout>
+      android:layout_height="0dp"
+      android:layout_weight="1"/>
+
+  <android.support.design.widget.BottomNavigationView
+      android:id="@+id/tabs"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:background="@color/colorPrimary"
+      app:itemIconTint="@color/md_white_1000"
+      app:itemTextColor="@color/md_white_1000"
+      app:menu="@menu/bottom_tabs"/>
+
+
+</LinearLayout>
