--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
 
   <include layout="@layout/include_toolbar"/>
 
-  <FrameLayout
-      android:id="@+id/content"
+  <android.support.v4.view.ViewPager
+      android:id="@+id/viewpager"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"/>
