--- a/sample/src/main/res/layout/fragment_index.xml
+++ b/sample/src/main/res/layout/fragment_index.xml
@@ -5,7 +5,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-  <android.support.v7.widget.RecyclerView
+  <TextView
+      android:id="@+id/text"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"/>
+      android:layout_height="wrap_content"/>
+
+  <!--<android.support.v7.widget.RecyclerView-->
+  <!--android:layout_width="match_parent"-->
+  <!--android:layout_height="match_parent"/>-->
 </LinearLayout>
