--- a/sample/src/main/res/menu/bottom_tabs.xml
+++ b/sample/src/main/res/menu/bottom_tabs.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
   <item
-      android:id="@+id/add"
+      android:id="@+id/tab_home"
       android:icon="@drawable/ic_home_white_24dp"
       android:title="@string/tab_home"/>
 
   <item
-      android:id="@+id/me"
+      android:id="@+id/tab_mine"
       android:icon="@drawable/ic_person_outline_white_24dp"
       android:title="@string/tab_mine"/>
 </menu>
