--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,7 +13,7 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent">
 
-    <cn.winxo.toolbox.AdvancedRecyclerView
+    <cn.winxo.toolbox.widget.AdvancedRecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
