--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,21 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v4.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipe_refresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/md_grey_50"
-    android:orientation="vertical"
     android:padding="8dp">
 
-
-  <android.support.v4.widget.SwipeRefreshLayout
-      android:id="@+id/swipe_refresh"
+  <android.support.v7.widget.RecyclerView
+      android:id="@+id/recycler_view"
       android:layout_width="match_parent"
-      android:layout_height="match_parent">
-
-    <cn.winxo.toolbox.widget.AdvancedRecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-  </android.support.v4.widget.SwipeRefreshLayout>
-</LinearLayout>
+      android:layout_height="match_parent"/>
+</android.support.v4.widget.SwipeRefreshLayout>
