--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -20,18 +20,26 @@
       android:textSize="@dimen/font_16"
       tools:text="摄像头预览画面变形"/>
 
-  <ImageView
-      android:id="@+id/swipe_edit"
-      android:layout_width="36dp"
-      android:layout_height="wrap_content"
-      android:foregroundGravity="center"
-      android:src="@drawable/ic_edit"/>
+  <LinearLayout
+      android:layout_width="72dp"
+      android:layout_height="match_parent"
+      android:gravity="center"
+      android:orientation="horizontal">
 
-  <ImageView
-      android:id="@+id/swipe_delete"
-      android:layout_width="36dp"
-      android:layout_height="wrap_content"
-      android:foregroundGravity="center"
-      android:src="@drawable/ic_trash_can"/>
+    <ImageView
+        android:id="@+id/swipe_edit"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:src="@drawable/ic_edit"/>
+
+    <ImageView
+        android:id="@+id/swipe_delete"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:src="@drawable/ic_trash_can"/>
+  </LinearLayout>
+
 
 </cn.winxo.toolbox.widget.SwipeMenuLayout>
