--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -8,7 +8,7 @@
     android:background="@color/md_grey_50"
     android:orientation="vertical">
 
-  <android.support.v7.widget.AppCompatEditText
+  <EditText
       android:id="@+id/add_task_input"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
