--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-  <android.support.v4.view.ViewPager
+  <androidx.viewpager.widget.ViewPager
       android:id="@+id/viewpager"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"/>
 
-  <android.support.design.widget.BottomNavigationView
+  <com.google.android.material.bottomnavigation.BottomNavigationView
       android:id="@+id/tabs"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
