--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<cn.winxo.toolbox.widget.SwipeMenuLayout
+<cn.winxo.toolbox.module.widget.SwipeMenuLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -42,4 +42,4 @@
   </LinearLayout>
 
 
-</cn.winxo.toolbox.widget.SwipeMenuLayout>
+</cn.winxo.toolbox.module.widget.SwipeMenuLayout>
